--- a/src/index.css
+++ b/src/index.css
@@ -226,3 +226,12 @@
   -webkit-background-clip: text;
   color: transparent;
 }
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
